# ftn_solo_control

./: .clang_format  CMakeLists.txt  LICENSE  README.md  __init__.py  package.xml
include/ftn_solo_control/: estimators.h
include/ftn_solo_control/controllers/: whole_body.h
include/ftn_solo_control/iir/: Biquad.h  Butterworth.h  Cascade.h  Layout.h  MathSupplement.h  PoleFilter.h  State.h  Types.h  biquad.h  butterworth.h  cascade.h  common.h  layout.h  math_supplement.h  pole_filter.h  state.h  types.h
include/ftn_solo_control/motions/: bindings.h  com_motion.h  eef_linear_motion.h  eef_position_motion.h  eef_rotation_motion.h  joint_motion.h  motion.h  solver.h
include/ftn_solo_control/trajectories/: piecewise_linear.h  spline.h  trajectory.h
include/ftn_solo_control/types/: common.h  convex_hull_2d.h  friction_cone.h  geometric_path.h  piecewise_poly_path.h  sensors.h
include/ftn_solo_control/utils/: config_utils.h  conversions.h  trajectory_planner.h  utils.h  visualization_utils.h  wcm.h
src/: bindings.cpp  estimators.cpp  test.cpp  test_node.cpp
src/controllers/: whole_body.cpp
src/iir/: Biquad.cpp  Butterworth.cpp  Cascade.cpp  PoleFilter.cpp  State.cpp  biquad.cpp  butterworth.cpp  cascade.cpp  pole_filter.cpp
src/motions/: bindings.cpp  com_motion.cpp  eef_linear_motion.cpp  eef_position_motion.cpp  eef_rotation_motion.cpp  joint_motion.cpp  solver.cpp
src/trajectories/: piecewise_linear.cpp  spline.cpp
src/types/: convex_hull_2d.cpp  friction_cone.cpp  geometric_path.cpp  piecewise_poly_path.cpp
src/utils/: config_utils.cpp  conversions.cpp  trajectory_planner.cpp  trajectory_planner.cpp.orig  utils.cpp  visualization_utils.cpp  wcm.cpp
